--- a/public/index-en.html
+++ b/public/index-en.html
@@ -52,6 +52,14 @@
 			"maximumAttendeeCapacity": 6,
 			"petsAllowed": false,
 			"smokingAllowed": true,
+			"additionalType": "Villa",
+			"containsPlace": {
+				"@type": "Accommodation",
+				"additionalType": "EntirePlace",
+				"occupancy": { "@type": "QuantitativeValue", "value": 6 },
+				"numberOfBedrooms": 3,
+				"numberOfRooms": 5
+			},
 			"aggregateRating": {
 				"@type": "AggregateRating",
 				"ratingValue": "4.8",
