--- a/public/index-de.html
+++ b/public/index-de.html
@@ -619,8 +619,7 @@
 				if (window.GOOGLE_MAPS_API_KEY) {
 					const script = document.createElement('script');
 					script.src = `https://maps.googleapis.com/maps/api/js?key=${window.GOOGLE_MAPS_API_KEY}&callback=initMap`;
-					script.async = true;
-					script.defer = true;
+					script.loading = 'async';
 					document.head.appendChild(script);
 				} else {
 					console.error('❌ Clé API Google Maps non disponible');
