--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 				"occupancy": { "@type": "QuantitativeValue", "value": 6 },
 				"numberOfBedrooms": 3,
 				"numberOfRooms": 5,
-				"numberOfBathrooms": 3,
+				"numberOfBathroomsTotal": 3,
 				"bed": [
 					{ "@type": "BedDetails", "typeOfBed": "Queen",  "numberOfBeds": 2 },
 					{ "@type": "BedDetails", "typeOfBed": "Single", "numberOfBeds": 2 }
