--- a/public/annuler-reservation.html
+++ b/public/annuler-reservation.html
@@ -563,15 +563,18 @@
             lockMessage = t.locks.cancellation_pending
           }
 
-          // Désactiver le bouton si verrouillage ou pas d'acompte
-
-          if (shouldLock || !hasDeposit) {
+          // Désactiver le bouton si verrouillage ou réservation non acceptée
+          const isReservationAccepted =
+            d.status === 'accepted' ||
+            d.status === 'depositPay' ||
+            d.status === 'balancePay'
+          if (shouldLock || !isReservationAccepted) {
             btn.disabled = true
             policyBox.classList.add('error')
             if (shouldLock) {
               policyBox.innerHTML = `<span style="color: #ef4444; font-weight: 600;">${lockMessage}</span>`
             } else {
-              // Si pas de verrouillage mais pas d'acompte, afficher le message de politique
+              // Si pas de verrouillage mais réservation non acceptée, afficher le message de politique
               policyBox.innerHTML = `<span>${msg}</span>`
               policyBox.style.color = '#fff'
               policyBox.style.opacity = '0.95'
@@ -580,7 +583,6 @@
             btn.disabled = false
             policyBox.classList.remove('error')
             // Afficher le message de politique normal
-
             policyBox.innerHTML = `<span>${msg}</span>`
             policyBox.style.color = '#fff'
             policyBox.style.opacity = '0.95'
