Modif taxe séjour

--- a/public/finaliser-reservation.html
+++ b/public/finaliser-reservation.html
@@ -152,6 +152,28 @@
         font-weight: 700;
         box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
       }
+
+      /* Message taxe de séjour */
+      .tourist-tax-notice {
+        margin: 20px 0;
+        padding: 15px 20px;
+        background: rgba(59, 130, 246, 0.1);
+        border: 1px solid rgba(59, 130, 246, 0.3);
+        border-radius: 12px;
+        backdrop-filter: blur(10px);
+      }
+      .tax-notice-content {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+        color: #3b82f6;
+        font-size: 0.95rem;
+        font-weight: 500;
+      }
+      .tax-notice-content i {
+        font-size: 1.1rem;
+        color: #3b82f6;
+      }
       .payment-section::before {
         content: '';
         position: absolute;
@@ -883,6 +905,19 @@
                   <span id="remaining-amount">Calcul en cours...</span>
                 </div>
               </div>
+
+              <!-- Message taxe de séjour -->
+              <div
+                id="tourist-tax-notice"
+                class="tourist-tax-notice"
+                style="display: none"
+              >
+                <div class="tax-notice-content">
+                  <i class="fas fa-info-circle"></i>
+                  <span id="tourist-tax-text"></span>
+                </div>
+              </div>
+
               <div class="payment-form">
                 <div class="form-group">
                   <label for="card-element" id="card-label"
@@ -1190,6 +1225,39 @@
               lockText.textContent =
                 t.locks?.reservation_canceled || 'Réservation annulée'
             }
+          }
+
+          // Mettre à jour le message de la taxe de séjour
+          const touristTaxNotice = document.getElementById('tourist-tax-notice')
+          const touristTaxText = document.getElementById('tourist-tax-text')
+          if (
+            touristTaxNotice &&
+            touristTaxText &&
+            window.reservationData.priceTax > 0
+          ) {
+            const t =
+              window.translations[currentLang]?.['finaliser-reservation']
+            const taxText =
+              t?.payment?.tourist_tax_note ||
+              'La taxe de séjour de {amount} € sera à remettre en liquide à la concierge à votre arrivée.'
+            const locale =
+              currentLang === 'de'
+                ? 'de-DE'
+                : currentLang === 'en'
+                ? 'en-GB'
+                : 'fr-FR'
+            const formattedTaxAmount =
+              window.reservationData.priceTax.toLocaleString(locale, {
+                minimumFractionDigits: 2,
+                maximumFractionDigits: 2
+              })
+            touristTaxText.textContent = taxText.replace(
+              '{amount}',
+              formattedTaxAmount
+            )
+            touristTaxNotice.style.display = 'block'
+          } else if (touristTaxNotice) {
+            touristTaxNotice.style.display = 'none'
           }
 
           const errorContainer = document.getElementById('error-container')
@@ -1610,6 +1678,28 @@
           const dpi = document.getElementById('deposit-percent-inline')
           if (dp) dp.textContent = `${percent}%`
           if (dpi) dpi.textContent = `${percent}%`
+
+          // Afficher le message de la taxe de séjour
+          const touristTaxNotice = document.getElementById('tourist-tax-notice')
+          const touristTaxText = document.getElementById('tourist-tax-text')
+          if (touristTaxNotice && touristTaxText && data.priceTax > 0) {
+            const t =
+              window.translations[currentLang]?.['finaliser-reservation']
+            const taxText =
+              t?.payment?.tourist_tax_note ||
+              'La taxe de séjour de {amount} € sera à remettre en liquide à la concierge à votre arrivée.'
+            const formattedTaxAmount = data.priceTax.toLocaleString(locale, {
+              minimumFractionDigits: 2,
+              maximumFractionDigits: 2
+            })
+            touristTaxText.textContent = taxText.replace(
+              '{amount}',
+              formattedTaxAmount
+            )
+            touristTaxNotice.style.display = 'block'
+          } else if (touristTaxNotice) {
+            touristTaxNotice.style.display = 'none'
+          }
 
           window.totalAmount = totalAmount
         } else {
