Fix error encart solde sans taxe sejour

--- a/public/annuler-reservation.html
+++ b/public/annuler-reservation.html
@@ -498,7 +498,9 @@
             d.balanceAmount ||
               Math.max(
                 0,
-                Number(d.priceTotal || 0) - Number(d.depositAmount || 0)
+                Number(d.priceTotal || 0) -
+                  Number(d.depositAmount || 0) -
+                  Number(d.priceTax || 0)
               )
           )
           const dataForRecap = { ...d, balanceAmount: recapBalanceAmount }
@@ -603,7 +605,8 @@
                 Math.max(
                   0,
                   Number(window.reservationData.priceTotal || 0) -
-                    Number(window.reservationData.depositAmount || 0)
+                    Number(window.reservationData.depositAmount || 0) -
+                    Number(window.reservationData.priceTax || 0)
                 )
             )
             const dataForRecap = { ...window.reservationData, balanceAmount }
