--- a/public/guide-pratique.html
+++ b/public/guide-pratique.html
@@ -396,28 +396,12 @@
                     />
                     <div class="guide-tags">
                       <a
-                        href="https://www.hertzantilles.com/fr/location-de-voiture-guadeloupe"
+                        href="https://www.pro-rent.com/"
                         target="_blank"
                         class="guide-tag-link"
                         onclick="stopEventPropagation(event)"
                       >
-                        <span class="guide-tag">Hertz</span>
-                      </a>
-                      <a
-                        href="https://www.europcar-guadeloupe.com/agences/aeroport-pointe-a-pitre"
-                        target="_blank"
-                        class="guide-tag-link"
-                        onclick="stopEventPropagation(event)"
-                      >
-                        <span class="guide-tag">Europcar</span>
-                      </a>
-                      <a
-                        href="https://www.avis.fr/"
-                        target="_blank"
-                        class="guide-tag-link"
-                        onclick="stopEventPropagation(event)"
-                      >
-                        <span class="guide-tag">Avis</span>
+                        <span class="guide-tag">PRO-rent</span>
                       </a>
                     </div>
                   </div>
@@ -443,26 +427,6 @@
                   </div>
                   <div class="guide-card-content">
                     <h3 class="guide-card-title">Taxi</h3>
-                    <p class="guide-card-description">
-                      Cliquez pour en savoir plus…
-                    </p>
-                  </div>
-                </article>
-
-                <!-- Navette -->
-                <article onclick="showPopup('navette')" class="guide-card">
-                  <div style="position: relative">
-                    <img
-                      src="images/guide/47.webp"
-                      alt="Navette"
-                      class="guide-card-image"
-                    />
-                    <div class="guide-tags">
-                      <span class="guide-tag">Économique</span>
-                    </div>
-                  </div>
-                  <div class="guide-card-content">
-                    <h3 class="guide-card-title">Navette</h3>
                     <p class="guide-card-description">
                       Cliquez pour en savoir plus…
                     </p>
@@ -1595,6 +1559,28 @@
                   </div>
                   <div class="guide-card-content">
                     <h3 class="guide-card-title">Électricité</h3>
+                    <p class="guide-card-description">
+                      Cliquez pour en savoir plus…
+                    </p>
+                  </div>
+                </article>
+
+                <!-- Le système d'assainissement -->
+                <article
+                  onclick="showPopup('assainissement')"
+                  class="guide-card"
+                >
+                  <div style="position: relative">
+                    <img
+                      src="images/guide/78.webp"
+                      alt="Le système d'assainissement"
+                      class="guide-card-image"
+                    />
+                  </div>
+                  <div class="guide-card-content">
+                    <h3 class="guide-card-title">
+                      Le système d'assainissement
+                    </h3>
                     <p class="guide-card-description">
                       Cliquez pour en savoir plus…
                     </p>
